# factory-boy-best-practices

./: README.md  pyproject.toml
mysite/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
mysite/mysite/: settings.py
mysite/polls/: admin.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py  0002_auto_20210624_1414.py  0003_alter_choice_question.py  0004_auto_20210625_2344.py  0004_auto_20210625_2344_squashed_0008_alter_parentsinfo_person.py  0005_alter_poll_question.py  0006_auto_20210626_1039.py  0007_parentsinfo_person.py  0008_alter_parentsinfo_person.py
mysite/polls/templates/polls/: detail.html  index.html  results.html
mysite/polls/tests/: factories.py  test_models.py  test_views.py
mysite/polls/tests/rule_1/: bad_factories.py  good_factories.py  test_rule_1.py
mysite/polls/tests/rule_2/: bad_factories.py  good_factories.py  test_rule_2.py
mysite/polls/tests/rule_3/: bad_factories.py  good_factories.py
mysite/polls/tests/rule_4/: good_factories.py  test_rule_4.py
mysite/polls/tests/rule_5/: good_factories.py  test_rule_5.py
mysite/polls/tests/test_rules/rule_1/: bad_factories.py  good_factories.py  test_rule_1.py
mysite/polls/tests/test_rules/rule_2/: bad_factories.py  good_factories.py  test_rule_2.py
mysite/polls/tests/test_rules/rule_3/: bad_factories.py  good_factories.py  test_rule_3.py
mysite/polls/tests/test_with_factories/: factories.py  test_models.py
mysite/polls/tests/test_without_factory_boy/: test_models.py
mysite/polls/tests/without_factory_boy/: test_models.py
(+4 files in other folders)
